<resources>
    <string name="app_name">ESMUS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_model">ModelActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register_activivty">ESMUS</string>
    <string name="title_activity_phrases">ESMUS</string>
    <string name="title_activity_show_phrase">ESMUS</string>
    <string name="title_activity_advises">ESMUS</string>
    <string name="title_activity_show_advice">ESMUS</string>
    <string name="welcome_text">¡Bienvenido a ESMUS!\nUn pequeño regustro inicial para saber un poco mas de ti y podras comenzar a usar la app!</string>
    <string name="login_name">Nombre:</string>
    <string name="login_surname">Apellido:</string>
    <string name="login_country">Lugar de visita:</string>
    <string name="name_example">Ej:Fernando</string>
    <string name="surname_example">Ej:Aguilera</string>
    <string name="country_example">Ej:Chicago</string>
    <string name="button_save">Continuar</string>
    <string name="error_login">FALTAN DATOS!Inroduce todos los datos por favor, no seran utlizados para ninguna actividad clandestina o ilegal!Ni los venderemos!;-)</string>
    <string name="no_micro" />
    <string name="title_activity_ajustes">Settings</string>
    <string name="title_activity_last_phrases">LastPhrases</string>
</resources>
