<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="25dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView  android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_name"
            />
        <EditText
            android:id="@+id/login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_example"
             />
        <TextView  android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_surname"

            />
        <EditText
            android:id="@+id/login_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/surname_example"
            />
        <TextView  android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_country"
            />
        <EditText
            android:id="@+id/login_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/country_example"
            />
    </GridLayout>

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:onClick="saveLogin"/>
    <TextView
        android:id="@+id/error_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_login"
        android:textColor="@color/red"
        android:visibility="invisible"
        />

</LinearLayout>
