<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.alejandro.esmus.AjustesActivity"
    tools:showIn="@layout/activity_ajustes">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></LinearLayout>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="7"
        android:id="@+id/gridLayout">

        <TextView  android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_name"
        android:layout_row="0"
        android:layout_column="0" />
        <EditText
            android:id="@+id/ajustes_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_example"
            android:layout_row="0"
            android:layout_column="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cambiar"
            android:id="@+id/ajustes_botton1"
            android:layout_alignBottom="@+id/gridLayout"
            android:layout_row="0"
            android:layout_column="5"
            android:onClick="cambiarNombre"/>




        <TextView  android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_surname"

            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:id="@+id/ajustes_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/surname_example"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView  android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_country"
            android:layout_row="2"
            android:layout_column="0" />

        <EditText
            android:id="@+id/ajustes_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/country_example"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="cambiarNombre"/>


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cambiar"
            android:id="@+id/ajustes_botton3"
            android:layout_alignBottom="@+id/gridLayout"
            android:layout_row="1"
            android:layout_column="5"
            android:onClick="cambiarApellido"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cambiar"
            android:id="@+id/ajustes_botton2"
            android:layout_alignBottom="@+id/gridLayout"
            android:layout_row="2"
            android:layout_column="5"
            android:onClick="cambiarCiudad"/>


    </GridLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Resetear Aplicacion"
        android:id="@+id/ajustes_botton4"
        android:layout_row="2"
        android:layout_column="5"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="borrarDatos"/>


</RelativeLayout>
